@@ -5,22 +5,6 @@
 #
 
 module Gluon
-  # these methods should be explicitly defined at included class.
-  # * gluon_service_key
-  # * gluon_service_get
-  #
-  module BackendServiceAdaptor
-    def gluon_service_around_hook
-      yield
-    end
-
-    def gluon_service_start
-    end
-
-    def gluon_service_end
-    end
-  end
-
   class BackendServiceManager
     # for ident(1)
     CVS_ID = '$Id$'
@@ -31,31 +15,10 @@ module Gluon
       @service_set = {}
     end
 
-    def register(adaptor)
-      key = adaptor.gluon_service_key
-      if (@service_set.key? key) then
-        raise "failed to register `#{adaptor.class}' at `#{key}' (already registerd `#{@service_set[key].class}')"
-      end
-      @service_set[key] = adaptor
-      self
-    end
-
-    def apply_around_hook
-      apply_around_hook_r(@service_set.values) { yield }
-      self
-    end
-
-    def apply_around_hook_r(adaptors)
-      if (adaptors.empty?) then
-        yield
-      else
-        adaptors.shift.gluon_service_around_hook{
-          apply_around_hook_r(adaptors) { yield }
-        }
-      end
+    def add(name, value, &block)
+      @service_set[name] = [ value, block ]
       nil
     end
-    private :apply_around_hook_r
 
     def setup
       @service_set.freeze
@@ -63,21 +26,20 @@ module Gluon
         @services = []
         @struct = NO_SERVICE
       else
-        service_keys = []
         @services = []
-        for key, adaptor in @service_set
-          adaptor.gluon_service_start
+        service_keys = []
+        for key, (value, finalizer) in @service_set
+          @services << value
           service_keys << key
-          @services << adaptor.gluon_service_get
         end
         @struct = Struct.new(*service_keys)
       end
-      self
+      nil
     end
 
     def shutdown
-      @service_set.each_value do |adaptor|
-        adaptor.gluon_service_end
+      @service_set.each_value do |value, finalizer|
+        finalizer.call(value)
       end
       nil
     end
@@ -85,8 +47,6 @@ module Gluon
     def new_services
       @struct.new(*@services)
     end
-
-    alias call new_services
   end
 end
 
